--- a/.github/workflows/pandocvim.yml
+++ b/.github/workflows/pandocvim.yml
@@ -20,6 +20,7 @@ jobs:
           toc: true
           version: 'nvim >= 0.9.0'
           treesitter: true
+          demojify: true
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: 'docs: auto generate vimdoc'
